--- a/styles/main.css
+++ b/styles/main.css
@@ -172,3 +172,21 @@ textarea{
 background-color: rgba(1,1,1,0.8);
 color:white;
 }
+
+
+
+
+/*----------------------------------------------------JAVI-----------------------------------------*/
+
+.titx{
+    font-family: 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Geneva, Verdana, sans-serif;
+    font-size: 6vw;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 500;
+    line-height: 26.4px;
+    text-align: center;
+    width: 100%;
+    height: 20%;
+    float: center;
+}
